[workspace.package]
version = "1.0.0-alpha.5"
edition = "2024"

[workspace]
resolver = "2"
members = [
    "testangel",
    "testangel-engine",
    "testangel-engine-macros",
    "testangel-evidence",
    "testangel-rand",
    "testangel-time",
    "testangel-ipc",
    "testangel-user-interaction",
]
