[package]
name = "testangel-ipc"
version = "3.1.0"
edition.workspace = true
authors = [
    "Lily Hopkins <lily@hpkns.uk>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.9.0"
getset = "0.1.5"
serde = { version = "1.0.219", features = ["derive"] }

[build-dependencies]
cbindgen = "0.29.0"
cc = "1.2.17"
